--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,7 +1,26 @@
-include	./mocha.conf
-font_size	12
-background_opacity	0.95
+include	./catppuccin-frappe.conf
 
+cursor_blink_interval       0.5
+cursor_stop_blinking_after  1
+scrollback_lines            2000
+wheel_scroll_min_lines      1
+enable_audio_bell           no
+window_padding_width        10
+hide_window_decorations     yes
+background_opacity          0.90
+dynamic_background_opacity  yes
+confirm_os_window_close     0
+selection_foreground        none
+selection_background        none
+
+tab_bar_style		powerline
+tab_powerline_style	slanted
+tab_bar_edge		top
+tab_bar_margin_height	0.0 0.0
+
+###
+# Fonts
+font_size	12
 
 # BEGIN_KITTY_FONTS
 font_family      family="InputMono Nerd Font"
