Add nvim base config

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -18,8 +18,7 @@ monitor=,preferred,auto,auto
 
 $terminal = alacritty
 $fileManager = dolphin
-#$menu = wofi --show drun
-$menu = wakler
+$menu = walker
 
 
 #################
