--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -25,10 +25,8 @@ $menu = walker
 ### AUTOSTART ###
 #################
 
-# exec-once = $terminal
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
 exec-once = waybar
+exec-once = hypridle & hyprpaper
 
 
 #############################
