update hypr stuff

--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -10,7 +10,7 @@ background {
 }
 
 animations {
-    enabled = false
+    enabled = true
 }
 
 input-field {
@@ -27,7 +27,7 @@ input-field {
     font_family = CaskaydiaMono Nerd Font
     font_color = $font_color
 
-    placeholder_text =   Enter Password 󰈷 
+    placeholder_text = Enter Password
     check_color = $check_color
     fail_text = <i>$PAMFAIL ($ATTEMPTS)</i>
 
