--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -25,8 +25,7 @@ $menu = walker
 ### AUTOSTART ###
 #################
 
-exec-once = waybar
-exec-once = hypridle & hyprpaper
+exec-once = waybar & hypridle & hyprpaper
 
 
 #############################
